# Bare-Metal-Framework

./: CMakeLists.txt  CMakeSettings.json  README.md
bmf/: CMakeLists.txt  gpio.h
bmf/src/: gpio.c
tests/: CMakeLists.txt  test_gpio.c
toolchain/atmega328p/: flash.cmake  toolchain.cmake
